# gcsthin

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build.yml
src/: auth.rs  main.rs
